fixed text alignment

--- a/style.css
+++ b/style.css
@@ -92,8 +92,6 @@ body, html {
   z-index: 0;
   top: 50%;
   transform: translateY(-50%);
-    display: flex;
-  justify-content: center;   
   text-align: center;
 }
 
